--- a/src/rsg-components/TableOfContents/TableOfContents.css
+++ b/src/rsg-components/TableOfContents/TableOfContents.css
@@ -7,7 +7,7 @@
 	display: block;
 	box-sizing: border-box;
 	width: 170px;
-	margin: 15px 0 0 15px;
+	margin: 15px;
 	padding: 6px 12px;
 	font-size: 15px;
 	border-radius: 2px;
